fixed visibility of button animation

--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -228,13 +228,12 @@
                 height: 50px;
                 width: 40%;
                 position: relative;
+                color: var(--text-color);
                 text-transform: uppercase;
                 margin: 2% 15% 0% 52.4%;
                 font-size: 16px;
                 text-align: center;
                 cursor: pointer;
-                color: var(--text-color); //adjust text color
-                padding: 0;
                 border: none;
                 background-color: var(--background);//adjust between two modes
                 transition: all 0.3s;
@@ -262,7 +261,6 @@
                     width: 100%;
                     height: 100%;
                     opacity: 0;
-                    color: #FFF;
                     transition: all 0.3s;
                     border-top-width: 1px;
                     border-bottom-width: 1px;
@@ -271,6 +269,7 @@
                     border-top-color: rgba(255,255,255,0.5); /*white bar*/
                     border-bottom-color: rgba(255,255,255,0.5); /*white bar*/
                     transform: scale(0.1, 1);
+
                 }
                 
                 &:hover span {
@@ -280,6 +279,7 @@
                 &:hover::before {
                     opacity: 1; 
                     transform: scale(1, 1);
+                    
                 }
 
                 &::after {
@@ -287,8 +287,6 @@
                     position: absolute;
                     bottom: 0;
                     left: 0;
-                    width: 100%;
-                    height: 100%;
                     transition: all 0.3s;
                     z-index: 1;
                     background-color: var(--background);
